# autoannotate-timeseries

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_autoannotate_gui.py
.github/workflows/: publish.yml  tests.yml
docs/: api_reference.md  index.md  tutorials.md
examples/: advanced_usage.py  basic_usage.py
src/autoannotate/: __init__.py  config.py
src/autoannotate/core/: __init__.py  clustering.py  embeddings.py  organizer.py
src/autoannotate/ui/: __init__.py  cli.py  gui.py  html_preview.py  interactive.py
src/autoannotate/utils/: __init__.py  timeseries_loader.py  validators.py
tests/: test_clustering.py  test_config.py  test_embeddings.py  test_integration.py  test_organizer.py  test_timeseries_loader.py  test_validators.py
