[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoannotate-timeseries"
version = "0.1.0"
description = "SOTA unsupervised auto-annotation SDK for time series classification"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "MetaMind Innovations", email = "research@metamind-innovations.com"}
]
keywords = [
    "time-series",
    "clustering", 
    "auto-labeling",
    "machine-learning",
    "forecasting"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.3",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyarrow>=10.0.0",
    "plotly>=5.0.0",
    "git+https://github.com/amazon-science/chronos-forecasting.git",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
hdbscan = [
    "hdbscan>=0.8.29",
]
advanced = [
    "gluonts>=0.14.0",
]

[project.scripts]
autoannotate-ts = "autoannotate.ui.cli:main"

[project.urls]
Homepage = "https://github.com/metamind-innovations/autoannotate-timeseries"
Documentation = "https://autoannotate-timeseries.readthedocs.io"
Repository = "https://github.com/metamind-innovations/autoannotate-timeseries"
"Bug Tracker" = "https://github.com/metamind-innovations/autoannotate-timeseries/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoannotate = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=autoannotate --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true