[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autoannotate-timeseries"
version = "0.0.1"
description = "SOTA unsupervised auto-annotation SDK for time series classification"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { file = "LICENSE" }
authors = [
    { name = "MetaMind Innovations", email = "info@metamind.gr" }
]
keywords = [
    "time-series",
    "clustering",
    "auto-labeling",
    "machine-learning",
    "forecasting"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.3",
    "click>=8.0.0",
    "tqdm>=4.67.0",
    "rich>=14.0.0",
    "pyarrow>=19.0.0",
    "plotly>=5.0.0",
    "chronos-forecasting>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
hdbscan = [
    "hdbscan>=0.8.40",
]

[project.scripts]
autoannotate-ts-cli = "autoannotate.ui.cli:main"
autoannotate-ts = "autoannotate.ui.gui:main"

[project.urls]
Homepage = "https://github.com/metamind-innovations/autoannotate-timeseries"
Documentation = "https://github.com/Metamind-Innovations/autoannotate-timeseries/blob/main/README.md"
Issues = "https://github.com/Metamind-Innovations/autoannotate-timeseries/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoannotate = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=autoannotate --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true